--- a/config/ros_racer_calibration.yaml
+++ b/config/ros_racer_calibration.yaml
@@ -1,21 +1,20 @@
-Hue_low : 73
-Hue_high : 135
-Saturation_low : 72
+Hue_low : 71
+Hue_high : 122
+Saturation_low : 97
 Saturation_high : 255
-Value_low : 124
+Value_low : 66
 Value_high : 255
-gray_thresh : 20
-number_of_lines : 100
-error_threshold : 0.18
-Width_min : 10
-Width_max : 500
+gray_thresh : 0
+number_of_lines : 16
+error_threshold : 0.14
+Width_min : 24
+Width_max : 121
 inverted_filter : 0
-camera_start_height : 32
-camera_bottom_height : 92
+camera_start_height : 180
+camera_bottom_height : 360
 camera_left_width : 0
-camera_right_width : 160
+camera_right_width : 640
 steering_sensitivity : 1.0
-no_error_throttle : -0.018
-error_throttle : -0.018
-zero_throttle : -0.018
-error_threshold : 0.18
+zero_throttle : 0.10299999999999998
+no_error_throttle : 0.09099999999999997
+error_throttle : 0.09099999999999997
