Added updated calibration file

--- a/config/ros_racer_calibration.yaml
+++ b/config/ros_racer_calibration.yaml
@@ -1,20 +1,20 @@
-Hue_low : 0 
-Hue_high : 92 
-Saturation_low : 0 
-Saturation_high : 134 
-Value_low : 0 
-Value_high : 132 
-gray_thresh : 172 
-number_of_lines : 100 
-error_threshold : 0.14 
-Width_min : 10 
-Width_max : 500 
+Hue_low : 24 
+Hue_high : 175 
+Saturation_low : 1 
+Saturation_high : 255 
+Value_low : 2 
+Value_high : 180 
+gray_thresh : 133 
+number_of_lines : 29 
+error_threshold : 0.21 
+Width_min : 20 
+Width_max : 83 
 inverted_filter : 1 
 camera_start_height : 312 
-camera_bottom_height : 612 
-camera_left_width : 0 
-camera_right_width : 800 
+camera_bottom_height : 630 
+camera_left_width : 160 
+camera_right_width : 640 
 steering_sensitivity : 1.0 
-zero_throttle : 0.13400000000000012 
-no_error_throttle : 0.13800000000000012 
-error_throttle : 0.15000000000000013 
+zero_throttle : 0.125 
+no_error_throttle : 0.15200000000000014 
+error_throttle : 0.14200000000000013 
