--- a/config/ros_racer_calibration.yaml
+++ b/config/ros_racer_calibration.yaml
@@ -10,11 +10,11 @@ error_threshold : 0.51
 Width_min : 0
 Width_max : 437
 inverted_filter : 0
-camera_start_height : 312
-camera_bottom_height : 630
+camera_start_height : 366
+camera_bottom_height : 864
 camera_left_width : 160
 camera_right_width : 640
 steering_sensitivity : 1.0
-zero_throttle : 0.01
-no_error_throttle : 1.00
-error_throttle : 0.50
+zero_throttle : 0.09499999999999997
+no_error_throttle : 0.18799999999999994
+error_throttle : 0.14800000000000013
